src/objects/ExpendItem__c.object
<CustomObject>
    <fields>
        <fullName>AP_InvoiceImageFileURL__c</fullName>
        <formula>IF(ISBLANK( ImageFile__c ), NULL,
HYPERLINK(&quot;https://imaging.aecomnet.com/viewer/?eid=&quot; + SUBSTITUTE(ImageFile__c, &quot;.000000000000000&quot;, &quot;&quot;) + &quot;:1&amp;ceid=0&amp;etype=MVDOC&amp;caurl=&amp;window=MarkViewViewer&quot;, &quot;AP Invoice Image&quot; ))</formula>
        <label>AP Invoice Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdjustedExpenditureItemId__c</fullName>
        <label>Adjusted Expenditure Item Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillAmount__c</fullName>
        <label>Bill Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillCurrencyCode__c</fullName>
        <label>Bill Currency Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillJobBillingTitle__c</fullName>
        <label>Bill Job Billing Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillMarkupPercentage__c</fullName>
        <label>Bill Markup Percentage</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BillRateMultiplier__c</fullName>
        <label>Bill Rate Multiplier</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillRate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillTRXBillAmount__c</fullName>
        <label>Bill TRX Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillableFlag__c</fullName>
        <label>Billable Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostReportCategory__c</fullName>
        <label>Cost Report Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureDateFiscalMonth__c</fullName>
        <label>Expenditure Date Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureDatePreviousFiscalMonth__c</fullName>
        <label>Expenditure Date Previous Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureItemDate__c</fullName>
        <label>Expenditure Item Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpenditureItemID__c</fullName>
        <externalId>true</externalId>
        <label>Expenditure Item ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExpenditureOrgId__c</fullName>
        <label>Expenditure Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureResourceType__c</fullName>
        <label>Expenditure Resource Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureTypeCategory__c</fullName>
        <label>Expenditure Type Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <label>Expenditure Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageFile__c</fullName>
        <label>Image File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetZeroFlag__c</fullName>
        <label>Net Zero Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleProjectNumber__c</fullName>
        <formula>Project__r.OracleProjectnumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleSyncError__c</fullName>
        <label>Oracle Sync Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <inlineHelpText>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>Org Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLReportCategory__c</fullName>
        <label>P&amp;L Report Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonId__c</fullName>
        <externalId>true</externalId>
        <label>Person Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjFuncBillAmount__c</fullName>
        <label>Proj Func Bill Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectCreateDate__c</fullName>
        <formula>Project__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalBurdenedCost__c</fullName>
        <label>Project Functional Burdened Cost</label>
        <summarizedField>CostDistLine__c.ProjectFunctionalBurdenedCost__c</summarizedField>
        <summaryForeignKey>CostDistLine__c.ExpenditureItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCost__c</fullName>
        <label>Project Functional Raw Cost</label>
        <summarizedField>CostDistLine__c.ProjectFunctionalRawCost__c</summarizedField>
        <summaryForeignKey>CostDistLine__c.ExpenditureItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectStatusChangedDateOlder__c</fullName>
        <description>Last time the the project was changed from Closed to reopen. Is the exp item date is after that??</description>
        <formula>Project__r.StatusClosedToReOpenDate__c &lt; CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectStatusChangedDateOlder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Expenditure Items (Project Task)</relationshipLabel>
        <relationshipName>ExpenditureItemsProjectTask</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Cost Transactions</relationshipLabel>
        <relationshipName>ExpenditureItemsProject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProviderOrgId__c</fullName>
        <label>Provider Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReceiverOrgId__c</fullName>
        <label>Receiver Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferPriceFuncAmount__c</fullName>
        <label>Transfer Price Func Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransferredFromExpItemId__c</fullName>
        <label>Transferred From Exp Item Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferredSource__c</fullName>
        <label>Transferred Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorId__c</fullName>
        <label>Vendor Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherNumber__c</fullName>
        <label>Voucher Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Expenditure Item</label>
    <nameField>
        <displayFormat>Exp-{0}</displayFormat>
        <label>Expenditure Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenditure Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>